fixed several bugs and refactoring
